--- a/slider.css
+++ b/slider.css
@@ -99,7 +99,7 @@
         margin-left: 18px;
     }
     .navigation-visibility .slide-icon{
-        transform: translateY(100px);
+        display:none;
     }
 }
 @media (max-width: 950px) {
@@ -112,9 +112,7 @@
         max-width: 100% !important;
         height: 450px;
     }
-    .navigation-visibility .slide-icon{
-        transform: translateY(80px);
-    }
+   
 }
 @media (max-width: 900px) {
     .prev-btn, .next-btn {
@@ -126,9 +124,7 @@
         max-width: 100% !important;
         height: 400px;
     }
-    .navigation-visibility .slide-icon{
-        transform: translateY(50px);
-    }
+
 }
 @media (max-width: 850px) {
     .prev-btn, .next-btn {
@@ -140,34 +136,30 @@
         max-width: 100% !important;
         height: 400px;
     }
-    .navigation-visibility .slide-icon{
-        transform: translateY(30px);
-    }
+   
 }
 @media (max-width: 800px) {
     .prev-btn, .next-btn {
     
         margin-top: 70px !important;
+        font-size: 18px;
+        padding: 5px;
     }
     .slider{ 
         width: 100%;
         max-width: 100% !important;
         height: 400px;
     }
-    .navigation-visibility .slide-icon{
-        transform: translateY(-10px);
-    }
+  
 }
 @media(max-width: 750px){
-    .navigation-visibility .slide-icon{
-        transform: translateY(-40px);
-    }
+    
     .prev-btn, .next-btn {
         margin-bottom: 55px;
     }
     .prev-btn, .next-btn {
        
-        margin-top: 30px !important;
+        margin-top: 50px !important;
     }
     .slider{ 
        height: 350px !important;
@@ -175,15 +167,13 @@
     
 }
 @media(max-width: 700px){
-    .navigation-visibility .slide-icon{
-        transform: translateY(-70px);
-    }
+   
     .prev-btn, .next-btn {
         margin-bottom: 55px;
     }
     .prev-btn, .next-btn {
        
-        margin-top: 30px !important;
+        margin-top: 40px !important;
     }
     .slider{ 
        height: 300px !important;
@@ -191,11 +181,9 @@
     
 }
 @media(max-width: 650px){
-    .navigation-visibility .slide-icon{
-        transform: translateY(-90px);
-    }
     .prev-btn, .next-btn {
         margin-bottom: 80px;
+        
     }
     .slider{ 
         height: 290px !important;
